--- a/index.html
+++ b/index.html
@@ -1251,28 +1251,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
   </button>
 </div>
 
-<script>
-  document.getElementById('join-chat-btn').addEventListener('click', function () {
-    const chatContainer = document.getElementById('chat-container');
-
-    // Create Minnit chat embed
-    const span = document.createElement('span');
-    span.style.display = 'none';
-    span.className = 'minnit-chat-sembed';
-    span.setAttribute('data-chatname', 'https://organizations.minnit.chat/991232442860146/c/FAFGAMES?embed');
-    span.setAttribute('data-style', 'width:90%; height:500px; max-height:90vh;');
-    span.setAttribute('data-version', '1.52');
-
-    const script = document.createElement('script');
-    script.src = 'https://minnit.chat/js/embed.js?c=1752216300';
-    script.defer = true;
-
-    // Replace button with chat and attach script
-    chatContainer.replaceChild(span, this);
-    chatContainer.appendChild(script);
-
-  });
-</script>
+<script id="cid0020000415650505834" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 203px;height: 253px;">{"handle":"faf-games","arch":"js","styles":{"a":"ff7a21","b":100,"c":"000000","d":"000000","k":"ff7a21","l":"ff7a21","m":"ff7a21","p":"10","q":"ff7a21","r":100,"cnrs":"0.35","fwtickm":1}}</script>
 
 
     <!-- Games Area End -->
