--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   }
 }
 </script>
+	<script id="cid0020000415651036705" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"faf-games","arch":"js","styles":{"a":"ff7a21","b":100,"c":"000000","d":"000000","k":"ff7a21","l":"ff7a21","m":"ff7a21","p":"10","q":"ff7a21","r":100,"cnrs":"0.35","fwtickm":1}}</script>
 
 	  <style>
     .cta-button {
@@ -1240,7 +1241,6 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 	</div>
 
 
-<script id="cid0020000415650839616" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 300px;height: 265px;">{"handle":"faf-games","arch":"js","styles":{"a":"ff7a21","b":100,"c":"000000","d":"000000","k":"ff7a21","l":"ff7a21","m":"ff7a21","p":"10","q":"ff7a21","r":100,"cnrs":"0.35","fwtickm":1}}</script>
 
     <!-- Games Area End -->
     <!-- Footer Area Start -->
