--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
   }
 }
 </script>
-	<script id="cid0020000415651036705" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"faf-games","arch":"js","styles":{"a":"ff7a21","b":100,"c":"000000","d":"000000","k":"ff7a21","l":"ff7a21","m":"ff7a21","p":"10","q":"ff7a21","r":100,"cnrs":"0.35","fwtickm":1}}</script>
-
+<script id="cid0020000415651156368" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 300px;height: 265px;">{"handle":"faf-games","arch":"js","styles":{"a":"ff7a21","b":100,"c":"000000","d":"000000","k":"ff7a21","l":"ff7a21","m":"ff7a21","p":"10","q":"ff7a21","r":100,"bpos":"tr","cv":1,"cvbg":"CC0000","cvw":75,"cvh":30,"cnrs":"0.35","fwtickm":1}}</script>
 	  <style>
     .cta-button {
       display: inline-block;
