--- a/index.html
+++ b/index.html
@@ -101,6 +101,30 @@
 
     .discord-button:hover {
     }
+		    /* Button */
+  #chat-toggle {
+    position: fixed; right: 16px; bottom: 16px;
+    z-index: 9999;
+    padding: 10px 14px; border: 0; border-radius: 999px;
+    background:#ff7a21; color:#fff; font-weight:600; cursor:pointer;
+    box-shadow: 0 8px 24px rgba(0,0,0,.2);
+  }
+
+  /* Panel wrapper */
+  #chat-panel {
+    position: fixed; right: 16px; bottom: 72px; /* above the button */
+    z-index: 9998;
+    width: min(380px, 92vw);
+    height: clamp(320px, 60vh, 560px);
+    background:#000; border-radius: 14px; overflow:hidden;
+    box-shadow: 0 12px 32px rgba(0,0,0,.35);
+    display:none;
+  }
+
+  /* Tiny helper for ultra-small phones */
+  @media (max-width: 420px) {
+    #chat-panel { right: 8px; left: 8px; width: auto; }
+  }
 
   </style>
 
@@ -175,7 +199,6 @@
 </div>
         </div>
     </nav>
-	<script id="cid0020000415651156368" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 300px;height: 265px;">{"handle":"faf-games","arch":"js","styles":{"a":"ff7a21","b":100,"c":"000000","d":"000000","k":"ff7a21","l":"ff7a21","m":"ff7a21","p":"10","q":"ff7a21","r":100,"bpos":"tr","cv":1,"cvbg":"CC0000","cvw":75,"cvh":30,"cnrs":"0.35","fwtickm":1}}</script>
 
 
     <!-- Header Area End -->
@@ -185,6 +208,10 @@
     
     <section class="faf-games-area section_140">
         <div class="container">
+<button id="chat-toggle" aria-expanded="false" aria-controls="chat-panel">Open Chat</button>
+<div id="chat-panel" role="dialog" aria-label="Chat">
+  <div id="chatango-slot"></div>
+</div>
 
            
             <div class="row">
@@ -1360,6 +1387,67 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
     <script src="assets/js/script.js"></script>
 
 
+	
+<script>
+  (function(){
+    const btn = document.getElementById('chat-toggle');
+    const panel = document.getElementById('chat-panel');
+    const slot = document.getElementById('chatango-slot');
+    let loaded = false, embedScriptEl = null;
+
+    function panelVisible(v){
+      panel.style.display = v ? 'block' : 'none';
+      btn.textContent = v ? 'Close Chat' : 'Open Chat';
+      btn.setAttribute('aria-expanded', v ? 'true' : 'false');
+      if (v && !loaded) loadChatango();
+      if (v) sizeChat();
+    }
+
+    function sizeChat(){
+      const rect = panel.getBoundingClientRect();
+      if (embedScriptEl){
+        embedScriptEl.style.width = rect.width + 'px';
+        embedScriptEl.style.height = rect.height + 'px';
+      }
+    }
+
+    function loadChatango(){
+      const s = document.createElement('script');
+      s.id = 'cid0020000415651156368';
+      s.setAttribute('data-cfasync', 'false');
+      s.async = true;
+      s.src = '//st.chatango.com/js/gz/emb.js';
+      s.style.width = '100%';
+      s.style.height = '100%';
+      s.innerHTML = JSON.stringify({
+        handle: "faf-games",
+        arch: "js",
+        styles: {
+          a: "ff7a21", b: 100, c: "000000", d: "000000",
+          k: "ff7a21", l: "ff7a21", m: "ff7a21",
+          p: "10", q: "ff7a21", r: 100, bpos: "tr",
+          cv: 1, cvbg: "CC0000", cvw: 75, cvh: 30,
+          cnrs: "0.35", fwtickm: 1
+        }
+      });
+      slot.innerHTML = '';
+      slot.appendChild(s);
+      embedScriptEl = s;
+      loaded = true;
+      requestAnimationFrame(sizeChat);
+      setTimeout(sizeChat, 300);
+    }
+
+    btn.addEventListener('click', () => {
+      const open = panel.style.display !== 'block';
+      panelVisible(open);
+    });
+
+    window.addEventListener('resize', () => {
+      if (panel.style.display === 'block') sizeChat();
+    });
+  })();
+</script>
 		
 	
 </body>
