--- a/index.html
+++ b/index.html
@@ -1388,38 +1388,63 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 
 
 <script>
-  const btn   = document.getElementById('chatToggle');
-  const dock  = document.getElementById('chatDock');
-  const shell = document.getElementById('chatShell');
+  (function(){
+    const btn = document.getElementById('chat-toggle');
+    const panel = document.getElementById('chat-panel');
+    const slot = document.getElementById('chatango-slot');
+    let loaded = false, embedScriptEl = null;
 
-  let chatLoaded = false;
-
-  function loadChatango() {
-    const s = document.createElement('script');
-    s.id = 'chatango-embed';
-    s.src = 'https://st.chatango.com/js/gz/emb.js';
-    s.async = true;
-    s.style.width  = shell.clientWidth + 'px';
-    s.style.height = shell.clientHeight + 'px';
-    // Chatango expects JSON config as the script's text content
-    s.text = '{"handle":"faf-games","arch":"js","styles":{"a":"ff7a21","b":100,"c":"000000","d":"000000","k":"ff7a21","l":"ff7a21","m":"ff7a21","p":"10","q":"ff7a21","r":100,"cnrs":"0.35","fwtickm":1}}';
-    shell.appendChild(s);
-    chatLoaded = true;
-  }
-
-  btn.addEventListener('click', () => {
-    const isHidden = dock.hasAttribute('hidden');
-    if (isHidden) {
-      dock.removeAttribute('hidden');     // make visible first
-      if (!chatLoaded) loadChatango();     // then inject script
-      btn.textContent = 'Close Chat';
-      btn.ariaLabel = 'Close chat';
-    } else {
-      dock.setAttribute('hidden','');
-      btn.textContent = 'Open Chat';
-      btn.ariaLabel = 'Open chat';
+    function panelVisible(v){
+      panel.style.display = v ? 'block' : 'none';
+      btn.textContent = v ? 'Close Chat' : 'Open Chat';
+      btn.setAttribute('aria-expanded', v ? 'true' : 'false');
+      if (v && !loaded) loadChatango();
+      if (v) sizeChat();
     }
-  });
+
+    function sizeChat(){
+      const rect = panel.getBoundingClientRect();
+      if (embedScriptEl){
+        embedScriptEl.style.width = rect.width + 'px';
+        embedScriptEl.style.height = rect.height + 'px';
+      }
+    }
+
+    function loadChatango(){
+      const s = document.createElement('script');
+      s.id = 'cid0020000415652152232';
+      s.setAttribute('data-cfasync', 'false');
+      s.async = true;
+      s.src = '//st.chatango.com/js/gz/emb.js';
+      s.style.width = '100%';
+      s.style.height = '100%';
+      s.innerHTML = JSON.stringify({
+        handle: "faf-games",
+        arch: "js",
+        styles: {
+          a: "ff7a21", b: 100, c: "000000", d: "000000",
+          k: "ff7a21", l: "ff7a21", m: "ff7a21",
+          p: "10", q: "ff7a21", r: 100,
+          cnrs: "0.35", fwtickm: 1
+        }
+      });
+      slot.innerHTML = '';
+      slot.appendChild(s);
+      embedScriptEl = s;
+      loaded = true;
+      requestAnimationFrame(sizeChat);
+      setTimeout(sizeChat, 300);
+    }
+
+    btn.addEventListener('click', () => {
+      const open = panel.style.display !== 'block';
+      panelVisible(open);
+    });
+
+    window.addEventListener('resize', () => {
+      if (panel.style.display === 'block') sizeChat();
+    });
+  })();
 </script>
 
 
