--- a/index.html
+++ b/index.html
@@ -1388,64 +1388,23 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 
 
 <script>
-  (function(){
-    const btn = document.getElementById('chat-toggle');
-    const panel = document.getElementById('chat-panel');
-    const slot = document.getElementById('chatango-slot');
-    let loaded = false, embedScriptEl = null;
+  const btn = document.getElementById('chatToggle');
+  const dock = document.getElementById('chatDock');
 
-    function panelVisible(v){
-      panel.style.display = v ? 'block' : 'none';
-      btn.textContent = v ? 'Close Chat' : 'Open Chat';
-      btn.setAttribute('aria-expanded', v ? 'true' : 'false');
-      if (v && !loaded) loadChatango();
-      if (v) sizeChat();
+  btn.addEventListener('click', () => {
+    const open = dock.hasAttribute('hidden') ? false : true;
+    if (open){
+      dock.setAttribute('hidden','');
+      btn.textContent = 'Chat';
+      btn.ariaLabel = 'Open chat';
+    } else {
+      dock.removeAttribute('hidden');
+      btn.textContent = 'Close Chat';
+      btn.ariaLabel = 'Close chat';
     }
-
-    function sizeChat(){
-      const rect = panel.getBoundingClientRect();
-      if (embedScriptEl){
-        embedScriptEl.style.width = rect.width + 'px';
-        embedScriptEl.style.height = rect.height + 'px';
-      }
-    }
-
-    function loadChatango(){
-      const s = document.createElement('script');
-      s.id = 'cid0020000415652152232';
-      s.setAttribute('data-cfasync', 'false');
-      s.async = true;
-      s.src = '//st.chatango.com/js/gz/emb.js';
-      s.style.width = '100%';
-      s.style.height = '100%';
-      s.innerHTML = JSON.stringify({
-        handle: "faf-games",
-        arch: "js",
-        styles: {
-          a: "ff7a21", b: 100, c: "000000", d: "000000",
-          k: "ff7a21", l: "ff7a21", m: "ff7a21",
-          p: "10", q: "ff7a21", r: 100,
-          cnrs: "0.35", fwtickm: 1
-        }
-      });
-      slot.innerHTML = '';
-      slot.appendChild(s);
-      embedScriptEl = s;
-      loaded = true;
-      requestAnimationFrame(sizeChat);
-      setTimeout(sizeChat, 300);
-    }
-
-    btn.addEventListener('click', () => {
-      const open = panel.style.display !== 'block';
-      panelVisible(open);
-    });
-
-    window.addEventListener('resize', () => {
-      if (panel.style.display === 'block') sizeChat();
-    });
-  })();
+  });
 </script>
+
 
 
 		
