--- a/index.html
+++ b/index.html
@@ -248,11 +248,18 @@
 
 			 
 		    </div></div>
-<button id="chatToggle" aria-label="Open chat">Open Chat</button>
+<!-- Toggle button -->
+<button id="chatToggle" aria-label="Open chat">Chat</button>
 
+<!-- Your chat embed wrapper -->
 <div id="chatDock" hidden>
-  <div id="chatShell"></div>
+  <script id="cid0020000415652152232" data-cfasync="false" async
+    src="//st.chatango.com/js/gz/emb.js"
+    style="width: 320px; height: 420px;">
+    {"handle":"faf-games","arch":"js","styles":{"a":"ff7a21","b":100,"c":"000000","d":"000000","k":"ff7a21","l":"ff7a21","m":"ff7a21","p":"10","q":"ff7a21","r":100,"cnrs":"0.35","fwtickm":1}}
+  </script>
 </div>
+
 
 
 
