--- a/index.html
+++ b/index.html
@@ -248,17 +248,17 @@
 
 			 
 		    </div></div>
-<!-- Toggle button -->
-<button id="chatToggle" aria-label="Open chat">Chat</button>
+<button id="chatToggle" aria-label="Open chat">Open Chat</button>
 
-<!-- Your chat embed wrapper -->
-<div id="chatDock" hidden>
+<div id="chatDock" aria-hidden="true">
+  <!-- Chatango embed (sizes the box) -->
   <script id="cid0020000415652152232" data-cfasync="false" async
     src="//st.chatango.com/js/gz/emb.js"
-    style="width: 320px; height: 420px;">
+    style="width: clamp(280px, 32vw, 360px); height: clamp(360px, 55vh, 520px);">
     {"handle":"faf-games","arch":"js","styles":{"a":"ff7a21","b":100,"c":"000000","d":"000000","k":"ff7a21","l":"ff7a21","m":"ff7a21","p":"10","q":"ff7a21","r":100,"cnrs":"0.35","fwtickm":1}}
   </script>
 </div>
+
 
 
 
