--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 .chat-box{
   width: clamp(300px, 32vw, 420px);   /* min 300px to avoid “too small” */
   height: clamp(380px, 50vh, 560px);  /* min ~380px is comfy */
-  background:#000; border-radius:16px; overflow:hidden;
+  background: transparent; border-radius:16px; overflow:hidden;
   box-shadow: 0 12px 32px rgba(0,0,0,.35);
 }
 
