--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -444,7 +444,7 @@ dl dd {
         }
         
         .submit-btn {
-            background-color: #0077ff;
+            background-color: #ff7a21;
             color: white;
             border: none;
             padding: 0.8rem 1.5rem;
