--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1266,7 +1266,7 @@ If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol
                          <div class="col-lg-4 col-md-6 col-sm-12">
                              <div class="single-footer">
                                  <h3>About us</h3>
-       <p>Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://faf-games.github.io/">FAF Games</a>. Join FAF Games today and start playing!</p>
+       <p>Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://faf-games.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
                              </div>
                          </div>
                          <div class="col-lg-5 col-md-6 col-sm-12">
@@ -1338,7 +1338,7 @@ If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol
                                      </ul>
                                  </div>
                                  <div class="copyright">
-                                     <p>&copy; Copyrights 2020 FAF GAMES - All Rights Reserved</p>
+                                     <p>&copy; Copyrights 2025 FAF GAMES - All Rights Reserved</p>
                                  </div>
                              </div>
                          </div>
