--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1150,7 +1150,7 @@ If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol
     </p>
     <ol>
       <li>
-        <b>Search “1v1.lol unblocked” on Google</b> – You will find sites like <a href="https://faf-games.github.io" target="_blank"><b>FAF Games</b></a> that let you play straight from your browser, no downloads, no sign-ups.
+        <b>Search “1v1.lol unblocked” on Google</b> – You will find sites like <a href="https://faf-games.github.io" target="_blank"><b>FAF Games</b></a> Github that let you play straight from your browser, no downloads, no sign-ups.
       </li>
       <li>
         <b>Choose a trusted unblocked games site</b> – Look for quick loading times, no weird pop-ups, and a clean interface. If your favorite site goes down, just try another mirror. There are tons out there.
@@ -1213,7 +1213,7 @@ If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol
       </dd>
       <dt>What are the best sites for unblocked games?</dt>
       <dd>
-        Trusted sites like <a href="https://faf-games.github.io" target="_blank">unblocked games</a> are always a safe bet. Stick with well-known platforms to avoid malware or fake games.
+        Trusted sites like <a href="https://faf-games.github.io" target="_blank">FAF Games</a> are always a safe bet. Stick with well-known platforms to avoid malware or fake games.
       </dd>
       <dt>Who created 1v1.lol?</dt>
       <dd>
