--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -456,7 +456,7 @@ dl dd {
         }
         
         .submit-btn:hover {
-            background-color: #0055cc;
+            background-color: #793202;
         }
             
         </style>
