--- a/game/2048.html
+++ b/game/2048.html
@@ -300,6 +300,49 @@
                 margin-bottom: 30px;
                 margin-top: 20px
             }
+
+				      body {
+    background-color: #121212;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+  }
+  .section {
+    background-color: #1e1e1e;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+  }
+  h2 {
+    color: #ffffff;
+    border-bottom: 1px solid #333;
+    padding-bottom: 5px;
+  }
+  ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  li {
+    margin-bottom: 5px;
+  }
+
+			  .tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+  }
+  .tag {
+    background-color: #f5f5f5;
+    border-radius: 12px;
+    padding: 6px 12px;
+    font-size: 14px;
+    color: #5c4636;
+    border: 1px solid #ddd;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
+  .tag:hover {
+    background-color: #e3e3e3;
+  }
             
         </style>
 
@@ -431,6 +474,44 @@
           <section class="fag-games-area related_games section_100">
              <div class="container">
                 <div class="row">
+					 <div class="container">
+
+
+						 <div class="section">
+  <h2>About</h2>
+  <p><strong>2048</strong> is an addictive puzzle game where you slide numbered tiles on a grid to combine them and create the 2048 tile. Every move spawns a new tile, and the challenge is to plan your moves carefully before the board fills up. Playable instantly in your browser, it’s perfect for quick sessions at school, work, or home without any downloads.</p>
+  <p>Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work, or home, just click, relax, and enjoy no restrictions on what you can play.</p>
+</div>
+
+<div class="section">
+  <h2>Controls</h2>
+  <ul>
+    <li><strong>Arrow Keys / WASD:</strong> Move tiles</li>
+    <li><strong>R:</strong> Restart game</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Game Information</h2>
+  <ul>
+    <li><strong>Developer:</strong> Gabriele Cirulli</li>
+    <li><strong>Category:</strong> Puzzle, Casual</li>
+    <li><strong>Genre:</strong> Logic Puzzle</li>
+    <li><strong>Players:</strong> 10M+ (Active)</li>
+    <li><strong>Release Date:</strong> 2014</li>
+    <li><strong>Build:</strong> HTML5, JavaScript</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Categories & Tags</h2>
+  <div class="tags">
+    <span class="tag">Skill</span>
+    <span class="tag">Puzzle</span>
+    <span class="tag">Casual</span>
+  </div>
+</div>
+						 </div>
                    <div class="col-12">
                       <div class="site-heading">
                          <h2 class="heading_animation">Related <span>games</span></h2>
