--- a/game/2048.html
+++ b/game/2048.html
@@ -325,10 +325,11 @@
     margin-bottom: 5px;
   }
 
-			  .tags {
+ .tags {
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
+    margin-top: 10px;
   }
   .tag {
     background-color: #f5f5f5;
@@ -339,6 +340,7 @@
     border: 1px solid #ddd;
     cursor: pointer;
     transition: all 0.2s ease;
+    text-decoration: none;
   }
   .tag:hover {
     background-color: #e3e3e3;
@@ -477,9 +479,9 @@
 					 <div class="container">
 
 
-						 <div class="section">
+						<div class="section">
   <h2>About</h2>
-  <p><strong>2048</strong> is an addictive puzzle game where you slide numbered tiles on a grid to combine them and create the 2048 tile. Every move spawns a new tile, and the challenge is to plan your moves carefully before the board fills up. Playable instantly in your browser, it’s perfect for quick sessions at school, work, or home without any downloads.</p>
+  <p><strong>2048</strong> is an addictive number-merging game where you slide tiles to combine them and reach the legendary 2048 tile. Every move adds a new tile, so think ahead to avoid running out of space. Quick to learn but hard to master, it’s perfect for short breaks at school, work, or home — no downloads needed.</p>
   <p>Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work, or home, just click, relax, and enjoy no restrictions on what you can play.</p>
 </div>
 
@@ -495,7 +497,6 @@
   <h2>Game Information</h2>
   <ul>
     <li><strong>Developer:</strong> Gabriele Cirulli</li>
-    <li><strong>Category:</strong> Puzzle, Casual</li>
     <li><strong>Genre:</strong> Logic Puzzle</li>
     <li><strong>Players:</strong> 10M+ (Active)</li>
     <li><strong>Release Date:</strong> 2014</li>
@@ -503,13 +504,9 @@
   </ul>
 </div>
 
-<div class="section">
-  <h2>Categories & Tags</h2>
-  <div class="tags">
-    <span class="tag">Skill</span>
-    <span class="tag">Puzzle</span>
-    <span class="tag">Casual</span>
-  </div>
+<div class="tags">
+  <a href="/category/skill" class="tag">Skill</a>
+  <a href="/category/io-games" class="tag">.io Games</a>
 </div>
 						 </div>
                    <div class="col-12">
