--- a/game/2048.html
+++ b/game/2048.html
@@ -6,7 +6,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>2048 Unblocked: Play Now for Free on FAF Games</title>
+        <title>2048 Unblocked: Play Online for Free | FAF Games</title>
         <meta name="description" content="
        
             
