--- a/game/2048.html
+++ b/game/2048.html
@@ -480,9 +480,10 @@
 
 
 						<div class="section">
+ <div class="section">
   <h2>About</h2>
-  <p><strong>2048</strong> is an addictive number-merging game where you slide tiles to combine them and reach the legendary 2048 tile. Every move adds a new tile, so think ahead to avoid running out of space. Quick to learn but hard to master, it’s perfect for short breaks at school, work, or home — no downloads needed.</p>
-  <p>Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work, or home, just click, relax, and enjoy no restrictions on what you can play.</p>
+  <p><strong>2048</strong> is an addictive number merging game where you slide tiles to combine them and reach the 2048 tile. Every move adds a new tile so think ahead to avoid running out of space. Quick to learn but hard to master it is perfect for short breaks at school, work or home without any downloads.</p>
+  <p>Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work or home just click, relax and enjoy no restrictions on what you can play.</p>
 </div>
 
 <div class="section">
@@ -505,8 +506,8 @@
 </div>
 
 <div class="tags">
-  <a href="/category/skill" class="tag">Skill</a>
-  <a href="/category/io-games" class="tag">.io Games</a>
+  <a href="https://faf-games.github.io/skill/index.html" class="tag">Skill</a>
+  <a href="https://faf-games.github.io/io-games/index.html" class="tag">.io Games</a>
 </div>
 						 </div>
                    <div class="col-12">
