--- a/game/2048.html
+++ b/game/2048.html
@@ -480,9 +480,8 @@
 
 
 						<div class="section">
- <div class="section">
   <h2>About</h2>
-  <p><strong>2048</strong> is an addictive number merging game where you slide tiles to combine them and reach the 2048 tile. Every move adds a new tile so think ahead to avoid running out of space. Quick to learn but hard to master it is perfect for short breaks at school, work or home without any downloads.</p>
+  <p><strong>2048</strong> is a challenging online puzzle game where you slide numbered tiles on a 4x4 grid to merge identical numbers and create the 2048 tile. Every move spawns a new tile, so planning ahead is key to avoiding a full board. The game offers endless replayability and is perfect for quick thinking practice at school, work, or home without downloads.</p>
   <p>Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work or home just click, relax and enjoy no restrictions on what you can play.</p>
 </div>
 
