--- a/game/2048.html
+++ b/game/2048.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
     <html lang="en-US">
     <head>
@@ -480,8 +479,9 @@
 
 
 						<div class="section">
+ <div class="section">
   <h2>About</h2>
-  <p><strong>2048</strong> is a challenging online puzzle game where you slide numbered tiles on a 4x4 grid to merge identical numbers and create the 2048 tile. Every move spawns a new tile, so planning ahead is key to avoiding a full board. The game offers endless replayability and is perfect for quick thinking practice at school, work, or home without downloads.</p>
+  <p><strong>2048</strong> is a free online number merging puzzle where you slide tiles on a 4x4 grid to combine matching numbers and reach the 2048 tile. This <strong>2048 unblocked online game</strong> is perfect for school, work, or home, offering quick gameplay sessions that test your planning and logic skills. Enjoy endless replayability, smooth controls, and the challenge of beating your high score every time you <strong>play 2048 for free in your browser</strong> without downloads.</p>
   <p>Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work or home just click, relax and enjoy no restrictions on what you can play.</p>
 </div>
 
