--- a/game/2048.html
+++ b/game/2048.html
@@ -331,18 +331,18 @@
     margin-top: 10px;
   }
   .tag {
-    background-color: #f5f5f5;
+    background-color: #ff7a21;
     border-radius: 12px;
     padding: 6px 12px;
     font-size: 14px;
-    color: #5c4636;
+    color: #fff;
     border: 1px solid #ddd;
     cursor: pointer;
     transition: all 0.2s ease;
     text-decoration: none;
   }
   .tag:hover {
-    background-color: #e3e3e3;
+    background-color: #7f3300;
   }
             
         </style>
