--- a/game/2048.html
+++ b/game/2048.html
@@ -331,19 +331,20 @@
     margin-top: 10px;
   }
   .tag {
-    background-color: #ff7a21;
+    background-color: #3d3d3c;
     border-radius: 12px;
-    padding: 6px 12px;
+    padding: 0.3rem;
+    margin: .5rem;
     font-size: 14px;
-    color: #fff;
-    border: 1px solid #ddd;
+    color: #ffffffb3;
     cursor: pointer;
     transition: all 0.2s ease;
     text-decoration: none;
-  }
+}
   .tag:hover {
-    background-color: #7f3300;
-  }
+       background-color: #7f3300;
+    padding: 0.7rem;
+}
             
         </style>
 
